# google-workspace-multi-account

./: .gitignore  README.md  SKILL.md  pyproject.toml
references/: fresh-machine-setup.md  migration.md  usage.md
scripts/: account_store.py  deploy_skill.py  google_api_multi.py  install_skill.py  setup_multi.py
tests/: test_account_store.py  test_deploy_skill.py  test_install_skill.py
